--- a/_posts/Professional Background/2016-10-06-Unbabel.markdown
+++ b/_posts/Professional Background/2016-10-06-Unbabel.markdown
@@ -1,10 +1,10 @@
 ---
 layout: default
-modal-id: 4
+modal-id: 5
 date: 2015-10-06
 category: Professional
-employ-date: Jul 2015 - Oct 2015
-employ-title: Intern@Unbabel
+employ-date: Dec 2016 - Present
+employ-title: Software Engineer@Chilltime
 description: Research and development of fluency detection in natural text.<br>Development of the game Wordtap for linguistic editor evaluation.
 
 ---
