--- a/_posts/Academic Background/2016-05-01-Masters.markdown
+++ b/_posts/Academic Background/2016-05-01-Masters.markdown
@@ -1,10 +1,12 @@
 ---
 layout: default
-modal-id: 6
+modal-id: 300
 date: 2016-05-01
 category: Academic
-academic-date: Sep 2014 - Oct 2016 (Under Way)
+academic-date: Sep 2014 - Nov 2016
 academic-title: Master’s degree in Information Systems and Computer Engineering
-description: Currently finished 90 out of 120 ECTS. Only Thesis left.<br>Current Weighted Average&#58; 17.53 out of 20.
+description: 
+  <div>Finished with an average of 17 out of 20.</div>
+  <div>Earned academic excelence diploma in 1st year.</div>
 
 ---
