--- a/_posts/Professional Background/2024-04-16-Oxalis.markdown
+++ b/_posts/Professional Background/2024-04-16-Oxalis.markdown
@@ -6,7 +6,7 @@ category: Professional
 employ-date: Oct 2022 - April 2024 (1.5 years)
 employ-title: Associate Lead Engineer@Oxalis
 description:
-  <div><div>Worked in <a href="https://moonfrost.io/" target="_blank" rel="noopener noreferrer"><b>Moonfrost</b></a> - a multiplayer life-sim game inspired in Stardew Valley.     Responsibilities include:</div>
+  <div><div>Worked in <a href="https://moonfrost.io/" target="_blank" rel="noopener noreferrer"><b>Moonfrost</b></a> - a multiplayer life-sim game inspired in Stardew Valley. Responsibilities included:</div>
       <ul>
         <li>Mentored Lead Engineer and other team members, providing guidance and support in technical and non-technical matters.</li>
         <li> Handled <b>conflict management</b> between departments, serving as mediator and agenda facilitator when tough decisions had to be made, such as deciding deadlines and project scope disagreements.
